--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -2,11 +2,6 @@
 	margin: 0 0.75em*$lh;
 }
 
-#main {
-	position: relative;
-	z-index: 2;
-}
-
 .page {
 	background: white;
 	padding: 1em*$lh 0.75em*$lh 2em*$lh;
@@ -50,11 +45,15 @@ article {
 		box-shadow: 0 0 5px rgba(0,0,0,0.25);
 		margin: -2em 2em;
 		padding: 0.25em*$lh 1em*$lh 2em*$lh;
+		position: relative;
+		z-index: 10;
 	}
   article {
 		box-shadow: 0 0 5px rgba(0,0,0,0.25);
 		margin: -2em 0 -2em 2em;
 		padding: 1.5em*$lh 2em*$lh;
+		position: relative;
+		z-index: 10;
 		-webkit-clip-path: none;
 		clip-path: none;
   }
